--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.1",
     "@typescript-eslint/eslint-plugin": "^5.59.6",
     "eslint": "^8.40.0",
     "eslint-config-standard-with-typescript": "^34.0.1",
@@ -39,6 +40,8 @@
     "eslint-plugin-n": "^15.7.0",
     "eslint-plugin-promise": "^6.1.1",
     "jest": "^29.5.0",
+    "sequelize-mock": "^0.10.2",
+    "ts-jest": "^29.1.0",
     "typescript": "^5.0.4"
   }
 }
