--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Simples gerenciador de ferramentas",
   "main": "index.js",
   "scripts": {
+    "build": "tsc",
     "test": "jest",
-    "start": "nodemon --legacy-watch src/server.ts"
+    "start": "nodemon src/server.ts"
   },
   "repository": {
     "type": "git",
@@ -20,10 +21,12 @@
   "homepage": "https://github.com/guillCamargo/task-manager#readme",
   "dependencies": {
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^20.2.1",
     "@types/sequelize": "^4.28.15",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.22",
