--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^20.2.1",
     "@types/sequelize": "^4.28.15",
+    "@types/swagger-ui-express": "^4.1.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
@@ -31,6 +32,7 @@
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.22",
     "sequelize": "^6.31.1",
+    "swagger-ui-express": "^4.6.3",
     "ts-node": "^10.9.1",
     "uuid": "^9.0.0"
   },
