--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "test": "jest",
+    "test": "jest --setupFiles dotenv/config",
     "start": "nodemon src/server.ts"
   },
   "repository": {
