--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,10 +6,14 @@
     "forceConsistentCasingInFileNames": true,
     "strict": false,
     "skipLibCheck": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "allowJs": true
   },
   "include": [
     "src/**/*.ts",
-    "test/core/**/*.ts", "src/infra/database/config.js",
+    "test/core/**/*.ts",
+  ],
+  "exclude": [
+    "sequelize.config.js",
   ]
 }
