--- a/.env.template
+++ b/.env.template
@@ -10,8 +10,8 @@
 # === General ===
 
 NODE_LOCAL_PORT=3000
-NODE_DOCKER_PORT=3000N
-ODE_ENV=development
+NODE_DOCKER_PORT=3000
+NODE_ENV=development
 
 # === Secret ===
 
