--- a/package.json
+++ b/package.json
@@ -25,12 +25,17 @@
     "@types/node": "^20.2.1",
     "@types/sequelize": "^4.28.15",
     "@types/swagger-ui-express": "^4.1.3",
+    "axios": "^1.4.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.0",
+    "keycloak-connect": "^21.1.1",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
+    "node-fetch": "^3.3.1",
     "nodemon": "^2.0.22",
+    "querystring": "^0.2.1",
     "sequelize": "^6.31.1",
     "swagger-ui-express": "^4.6.3",
     "ts-node": "^10.9.1",
