mudanças no swagger para contemplar a nova implementação do login

--- a/.env.template
+++ b/.env.template
@@ -9,14 +9,9 @@
 
 # === General ===
 
+NODE_ENV=development
 NODE_LOCAL_PORT=3000
 NODE_DOCKER_PORT=3000
-NODE_ENV=development
-
-# === Secret ===
-
-# Set this for JWT
-SECRET=
 
 # === Database ===
 
@@ -27,3 +22,17 @@ MYSQLDB_LOCAL_PORT=3307
 MYSQLDB_DOCKER_PORT=3306
 MYSQLDB_DOCKER_HOST=dbmysql
 MYSQLDB_DIALECT=mysql
+
+MYSQLDB_AUTH_ROOT_PASSWORD=pa55w0rd
+MYSQLDB_AUTH_DATABASE=keycloak
+MYSQLDB_AUTH_LOCAL_PORT=3309
+MYSQLDB_AUTH_DOCKER_PORT=3306
+
+# === Keycloak ====
+
+KEYCLOAK_HOST=http://localhost
+KEYCLOAK_PORT=8080
+KEYCLOAK_REALM=tool-manager
+KEYCLOAK_SECRET=0bc575df-670f-4b77-8808-7f41aa72ba5b
+KEYCLOAK_CLIENT_ID=tool-manager-app
+KEYCLOAK_GRANT_TYPE_PASSWORD=password
